--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,18 +1,18 @@
 name: Testing continous integration 
 
-on : 
+on: 
 	push:
 	pull_request:
 
 	jobs:
 		run-tests:
 			strategy:
-				fail-fast:false
+				fail-fast: false
 				matrix:
 					os: [ubuntu-latest,macos-latest]
 					python-version: ["3.9", "3.10", "3.11"]
 
-			name: Test the name
+			name: Test
 			runs-on: ${{matrix.os}}
 
 
