--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,23 +3,22 @@ name: Testing continous integration
 on: [push,pull_request]
 
 jobs:
-	runtest:
- 		name: Test
-		strategy:
-			fail-fast: false
-			matrix:
-				os: [ubuntu-latest,macos-latest]
-				python-version: ["3.9", "3.10", "3.11"]
-		
-		runs-on: ${{matrix.os}}
-		steps:
-			- name: checkout code
-				uses: actions/checkout@v3
-			- name: setup python 
-				uses: actions/setup-actions@v4
-				with:
-					python-version: {{matrix.python-version}}
-			- name: Install all dependencies 
-				run: python -m pip install pytest . 
-			- name: Run the test
-				run: pytest
+ runtest:
+  name: Test
+  strategy:
+   fail-fast: false
+   matrix:
+    os: [ubuntu-latest,macos-latest]
+    python-version: ["3.9", "3.10", "3.11"]
+  runs-on: ${{matrix.os}}
+  steps:
+   - name: checkout code
+     uses: actions/checkout@v3
+   - name: setup python 
+     uses: actions/setup-actions@v4
+     with:
+      python-version: ${{matrix.python-version}}
+   - name: Install all dependencies 
+     run: python -m pip install pytest . 
+   - name: Run the test
+     run: pytest
