--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,4 +21,4 @@ jobs:
    - name: Install all dependencies 
      run: python -m pip install pytest . 
    - name: Run the test
-     run: pytest
+     run: pytest test.py
