--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,6 +19,6 @@ jobs:
      with:
       python-version: ${{matrix.python-version}}
    - name: Install all dependencies 
-     run: python -m pip install pytest . 
+     run: python -m pip install pytest 
    - name: Run the test
      run: pytest test.py
