--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -8,8 +8,8 @@ jobs:
   strategy:
    fail-fast: false
    matrix:
-    os: [ubuntu-latest,macos-latest]
-    python-version: ["3.9", "3.10", "3.11"]
+    os: [ubuntu-latest]
+    python-version: ["3.9"]
   runs-on: ${{matrix.os}}
   steps:
    - name: checkout code
